--- a/locale/en/recipe-name.cfg
+++ b/locale/en/recipe-name.cfg
@@ -4,6 +4,7 @@ electrolyte-crushed=Electrolyte (Crushed)
 concrete-crushed=Concrete (Crushed)
 molten-iron-crushed=Molten iron (Crushed)
 molten-copper-crushed=Molten copper (Crushed)
+molten-tungsten-crushed=Molten tungsten (Crushed)
 advanced-thruster-oxidizer-crushed=Advanced thruster oxidizer (Crushed)
 tungsten-plate-crushed=Tungsten plate (Crushed)
 
