Added missing locale

--- a/locale/en/recipe-name.cfg
+++ b/locale/en/recipe-name.cfg
@@ -13,6 +13,7 @@ electrolyte-vanilla=Electrolyte (Vanilla)
 concrete-vanilla=Concrete (Vanilla)
 molten-iron-vanilla=Molten iron (Vanilla)
 molten-copper-vanilla=Molten copper (Vanilla)
+molten-tungsten-vanilla=Molten tungsten (Vanilla)
 advanced-thruster-oxidizer-vanilla=Advanced thruster oxidizer (Vanilla)
 tungsten-plate-vanilla=Tungsten plate (Vanilla)
 
