--- a/locale/en/recipe-name.cfg
+++ b/locale/en/recipe-name.cfg
@@ -1,12 +1,12 @@
 [recipe-name]
-holmium-solution-crushed=Holmium solution (Crushed)
-electrolyte-crushed=Electrolyte (Crushed)
-concrete-crushed=Concrete (Crushed)
-molten-iron-crushed=Molten iron (Crushed)
-molten-copper-crushed=Molten copper (Crushed)
-molten-tungsten-crushed=Molten tungsten (Crushed)
-advanced-thruster-oxidizer-crushed=Advanced thruster oxidizer (Crushed)
-tungsten-plate-crushed=Tungsten plate (Crushed)
+holmium-solution-modded=Holmium solution (Modded)
+electrolyte-modded=Electrolyte (Modded)
+concrete-modded=Concrete (Modded)
+molten-iron-modded=Molten iron (Modded)
+molten-copper-modded=Molten copper (Modded)
+molten-tungsten-modded=Molten tungsten (Modded)
+advanced-thruster-oxidizer-modded=Advanced thruster oxidizer (Modded)
+tungsten-plate-modded=Tungsten plate (Modded)
 
 holmium-solution-vanilla=Holmium solution (Vanilla)
 electrolyte-vanilla=Electrolyte (Vanilla)
@@ -21,47 +21,55 @@ crusher-space-quality=Space Crusher (Quality)
 crusher-space-no-quality=Space Crusher (No Quality)
 crusher-vanilla=Crusher (Vanilla)
 
-lab-crushed=Lab (Glass)
+lab-modded=Lab (Glass)
 lab-vanilla=Lab (No Glass)
-chemical-plant-crushed=Chemical plant (Glass)
+chemical-plant-modded=Chemical plant (Glass)
 chemical-plant-vanilla=Chemical plant (No Glass)
-solar-panel-crushed=Solar panel (Glass)
+solar-panel-modded=Solar panel (Glass)
 solar-panel-vanilla=Solar panel (No Glass)
-night-vision-equipment-crushed=Night vision equipment (Glass)
+night-vision-equipment-modded=Night vision equipment (Glass)
 night-vision-equipment-vanilla=Night vision equipment (No Glass)
-display-panel-crushed=Display panel (Glass)
+display-panel-modded=Display panel (Glass)
 display-panel-vanilla=Display panel (No Glass)
-small-lamp-crushed=Small lamp (Glass)
+small-lamp-modded=Small lamp (Glass)
 small-lamp-vanilla=Small lamp (No Glass)
-laser-turret-crushed=Laser turret (Glass)
+laser-turret-modded=Laser turret (Glass)
 laser-turret-vanilla=Laser turret (No Glass)
-rail-signal-crushed=Rail signal (Glass)
+rail-signal-modded=Rail signal (Glass)
 rail-signal-vanilla=Rail signal (No Glass)
-rail-chain-signal-crushed=Rail chain signal (Glass)
+rail-chain-signal-modded=Rail chain signal (Glass)
 rail-chain-signal-vanilla=Rail chain signal (No Glass)
-biochamber-crushed=Biochamber (Glass)
+biochamber-modded=Biochamber (Glass)
 biochamber-vanilla=Biochamber (No Glass)
-agricultural-tower-crushed=Agricultural tower (Glass)
+agricultural-tower-modded=Agricultural tower (Glass)
 agricultural-tower-vanilla=Agricultural tower (No Glass)
-cryogenic-plant-crushed=Cryogenic plant (Glass)
+cryogenic-plant-modded=Cryogenic plant (Glass)
 cryogenic-plant-vanilla=Cryogenic plant (No Glass)
-space-science-pack-crushed=Space science pack (Glass)
+space-science-pack-modded=Space science pack (Glass)
 space-science-pack-vanilla=Space science pack (No Glass)
 
-coal-liquefaction-crushed=Coal liquefaction (Crushed)
+coal-liquefaction-modded=Coal liquefaction (Modded)
 coal-liquefaction-vanilla=Coal liquefaction (Vanilla)
-
-explosives-crushed=Explosives (Crushed)
+explosives-modded=Explosives (Modded)
 explosives-vanilla=Explosives (Vanilla)
-
-plastic-bar-crushed=Plastic bar (Crushed)
+plastic-bar-modded=Plastic bar (Modded)
 plastic-bar-vanilla=Plastic bar (Vanilla)
-
-poison-capsule-crushed=Poison capsule (Crushed)
+poison-capsule-modded=Poison capsule (Modded)
 poison-capsule-vanilla=Poison capsule (Vanilla)
-
-slowdoown-capsule-crushed=Slowdown capsule (Crushed)
-slowdoown-capsule-vanilla=Slowdown capsule (Vanilla)
-
-carbon-crushed=Carbon (Crushed)
+slowdown-capsule-modded=Slowdown capsule (Modded)
+slowdown-capsule-vanilla=Slowdown capsule (Vanilla)
+carbon-modded=Carbon (Modded)
 carbon-vanilla=Carbon (Vanilla)
+
+advanced-circuit-modded=Advanced circuit (Optical Fiber)
+advanced-circuit-vanilla=Advanced circuit (No Optical Fiber)
+processing-unit-modded=Processing unit (Optical Fiber)
+processing-unit-vanilla=Processing unit (No Optical Fiber)
+selector-combinator-modded=Selector combinator (Optical Fiber)
+selector-combinator-vanilla=Selector combinator (No Optical Fiber)
+roboport-modded=Roboport (Optical Fiber)
+roboport-vanilla=Roboport (No Optical Fiber)
+personal-roboport-equipment-modded=Personal roboport equipment (Optical Fiber)
+personal-roboport-equipment-vanilla=Personal roboport equipment (No Optical Fiber)
+beacon-modded=Beacon (Optical Fiber)
+beacon-vanilla=Beacon (No Optical Fiber)
