--- a/locale/en/mod-settings.cfg
+++ b/locale/en/mod-settings.cfg
@@ -1,13 +1,15 @@
 [mod-setting-name]
 restore-recipes-to-vanilla=Restore Vanilla recipes as default.
-restore-coal-recipes=Restore Coal Vanilla Recipes
-restore-glass-recipes=Restore Non-Glass Vanilla Recipes
-restore-ore-recipes=Restore Ore Vanilla Recipes
-unlock-crusher-recipes=Unlock Crusher Variants
+restore-coal-recipes=[item=wci-proxy-crushed-coal] Restore Coal Vanilla Recipes
+restore-glass-recipes=[item=wci-proxy-glass] Restore Non-Glass Vanilla Recipes
+restore-ore-recipes=[item=wci-proxy-crushed-ores] Restore Ore Vanilla Recipes
+restore-optical-fiber-recipes=[item=wci-proxy-optical-fiber] Restore Non-Optical Fiber Vanilla Recipes
+unlock-crusher-recipes=[item=crusher] Unlock Crusher Variants
 
 [mod-setting-description]
 restore-recipes-to-vanilla=When enabled, this option will change the chosen recipes below back to vanilla for the default choice and create new ones for crushed ores. (For compatibility with non Crushing Industry blueprints) Not recommended for existing playthroughs.
 restore-coal-recipes=Adds back the vanilla Coal recipes to allow use of non-crushed coal instead.
 restore-glass-recipes=Adds back the vanilla recipes that don't include the extra glass ingredient.
 restore-ore-recipes=Adds back the vanilla Ore recipes to allow use of non-crushed ores instead.
+restore-optical-fiber-recipes=Adds back the vanilla recipes that don't include the optical fiber. (Only has an effect if glass crushing is also enabled)
 unlock-crusher-recipes=If Space Crushed has been enabled, adds back the vanilla one as well as the alternate (quality vs no quality) crusher.
